objects/Expected_Close_Quarter__c.object
<CustomObject>
    <description>Lookup Object</description>
    <fields>
        <fullName>Expected_Close_Date__c</fullName>
        <label>Expected Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Close_Quarter__c</fullName>
        <label>Expected Close Quarter</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter_Start_Date__c</fullName>
        <description>We need this for story S-50840 in order to appropriately calculate the Revenue field on the opportunity object.</description>
        <label>Quarter Start Date</label>
        <type>Date</type>
    </fields>
    <label>Expected Close Quarter</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Quarter_Start_Date__c</columns>
        <columns>Expected_Close_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Expected_Close_Quarter__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Expected Close Quarter</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expected Close Quarters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>